<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:ignore="ContentDescription"
        tools:context=".ui.signIn_and_signUp.SignInFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:paddingEnd="18dp"
                android:src="@drawable/heart"
                tools:ignore="RtlSymmetry" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:fontFamily="@font/rowdies_regular_font"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textColor="@color/primary_color"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/welcome_back"
                />

            <EditText
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/username_hint"
                android:paddingStart="12dp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#9A9797"
                android:paddingEnd="5dp"
                tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck"
                android:autofillHints="username" />

            <EditText
                android:id="@+id/sign_in_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/enter_password"
                android:paddingStart="12dp"
                android:textColor="@color/black"
                android:textColorHint="#9A9797"
                android:paddingEnd="12dp"
                android:longClickable="false"
                android:drawableEnd="@drawable/baseline_visibility_off_24"
                tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize"
                android:inputType="textPassword" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="25dp"
                android:text="@string/forgot_password"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="50dp"
                style="@style/MyButtonStyle"
                android:text="@string/sign_in"
                tools:ignore="VisualLintButtonSize" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/or_left_img"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/or_sign_in_with"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/or_right_img"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                >
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/logInWithFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#F4F7FF"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="#F1F1F1"
                    app:strokeWidth="1dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/facebook_icon"
                        android:layout_gravity="center"/>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/logInWithApple"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#F4F7FF"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:strokeColor="#F1F1F1"
                    app:strokeWidth="1dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/apple_icon"
                        />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/logInWithGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#F4F7FF"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="#F1F1F1"
                    app:strokeWidth="1dp"
                    >
                    <ImageView
                        android:layout_width="23.17dp"
                        android:layout_height="23.03dp"
                        android:src="@drawable/google_icon"
                        android:layout_gravity="center"/>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/not_a_member"
                    />
                <TextView
                    android:id="@+id/registerNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_color"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:text="@string/register_now"/>
            </LinearLayout>

        </LinearLayout>
        

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>