<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".ui.signIn_and_signUp.otp.OTPVerificationFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/backButton"
            android:layout_width="36dp"
            android:layout_height="28dp"
            android:layout_marginTop="65dp"
            app:cardCornerRadius="5dp"
            app:strokeColor="#E6E6E6"
            app:strokeWidth="1dp"
            app:cardBackgroundColor="@color/white"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/back_arrow"/>
        </com.google.android.material.card.MaterialCardView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:paddingEnd="18dp"
            android:src="@drawable/heart"
            tools:ignore="RtlSymmetry" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:fontFamily="@font/rowdies_regular_font"
            android:gravity="center"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:textColor="@color/primary_color"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/otp_verification"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_otp_sent_to"
                android:textColor="#848484"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/textViewToSetOtpNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:hint="+9200000000"
                android:textColorHint="@color/black"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginHorizontal="50dp"
            android:weightSum="4"
            >

            <EditText
                android:id="@+id/edittext_pin1"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edittext_pin2"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/edittext_pin3"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edittext_pin4"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="23dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_you_receive_the_otp"
                android:textColor="#848484"
                android:textSize="16sp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/resendOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/resend_otp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/primary_color"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmOtp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="65dp"
            style="@style/MyButtonStyle"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/confirm"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</layout>